---- v0.3.1 ----

Changes from v0.3.0:

TaleScripter now compiles and runs on Mac OSX. This version includes the changes needed to facilitate that.
Changed file paths to use UNIX-style characters. This allows the project to run on both Windows and UNIX-like operating systems.
Fixed typo in header include guard
Removed TestScreen, as it is no longer required.
Made some other changes to resolve compiler warnings that were thrown from Clang.